[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/QuestJournal.png" type="Texture" id=1]
[ext_resource path="res://QuestNotification.gd" type="Script" id=2]
[ext_resource path="res://QuestSystem.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Filgaia.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 832, 480 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 4 )

[node name="Popup" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0

[node name="QuestNotificationPanel" type="Panel" parent="."]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 20.79
anchor_bottom = 13.161
margin_left = -202.0
margin_top = -448.0
margin_right = 562.4
margin_bottom = 194.56
rect_scale = Vector2( 5, 5.5 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="QuestNotification" type="Label" parent="QuestNotificationPanel"]
anchor_left = 0.024
anchor_top = 0.071
anchor_right = 0.128
anchor_bottom = 0.149
margin_left = -0.0159988
margin_top = -0.431
margin_right = -83.752
margin_bottom = -0.988998
custom_fonts/font = SubResource( 2 )
text = "Quest Active: MQ001"
autowrap = true
clip_text = true
uppercase = true

[node name="QuestNotification2" type="Label" parent="QuestNotificationPanel"]
anchor_left = 0.024
anchor_top = 0.071
anchor_right = 0.128
anchor_bottom = 0.149
margin_left = 85.984
margin_top = -1.88555
margin_right = 2.24799
margin_bottom = -2.44356
custom_fonts/font = SubResource( 2 )
text = "Quest Completed: MQ001"
autowrap = true
clip_text = true
uppercase = true

[node name="QuestManager" parent="QuestNotificationPanel" instance=ExtResource( 3 )]
